fix : navbar on mobile

--- a/src/Components/Navbar/NavItems.scss
+++ b/src/Components/Navbar/NavItems.scss
@@ -24,5 +24,31 @@
     translate: -0.5em -50%;
     z-index: -2;
   }
+
+
+  @media (max-width: 768px) {
+
+    .navbar__menu-item-wrapper {
+      padding-bottom: 20px;
+    }
+    
+    .navbar__menu-items {
+    }
+
+    .circle {
+      position: absolute;
+      top: 30%;
+      left: -2px;
+      width: 2em;
+      height: 2em;
+      //background-image:linear-gradient(135deg, #C97A48, #812648);
+      background: $accent-color-1;
+      //box-shadow: 0 0 5px 2px rgba(152, 132, 99, 0.5);
+      border-radius: 100vw;
+      translate: -0.5em -50%;
+      z-index: -2;
+    }
+
+  }
   
   
