--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -51,3 +51,8 @@ $side-page-desktop-padding : 10%;
   background: linear-gradient(to right, #94716B, #B79891); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   
 }
+
+@mixin zoom-effect {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
